# universal-memory-system

./: .gitignore  CLAUDE.md  Cargo.toml  start.ps1  stop.ps1  umms.toml
chat/: index.html  package-lock.json  package.json  vite.config.ts
chat/src/: App.vue  api.ts  types.ts
chat/src/__tests__/: AgentSelector.test.ts  ChatWindow.test.ts  EmptyState.test.ts  MessageBubble.test.ts  SourcePanel.test.ts  api.test.ts  test-utils.ts  useEvents.test.ts
chat/src/components/: AgentSelector.vue  ChatWindow.vue  EmptyState.vue  MessageBubble.vue  SourcePanel.vue  ThinkingIndicator.vue
chat/src/composables/: useEvents.ts
configs/: default.toml
crates/umms-analyzer/: Cargo.toml
crates/umms-analyzer/src/: lib.rs
crates/umms-analyzer/src/epa/: analyzer.rs  kmeans.rs  mod.rs  pca.rs
crates/umms-analyzer/src/intent/: mod.rs
crates/umms-analyzer/src/lgsrr/: decomposer.rs  mod.rs
crates/umms-analyzer/src/reshaping/: reshape.rs
crates/umms-api/: Cargo.toml
crates/umms-api/src/: error.rs  lib.rs  response.rs  state.rs
crates/umms-api/src/handlers/: agent.rs  analyze.rs  audit.rs  benchmarks.rs  chat.rs  consolidation.rs  diary.rs  encoder.rs  epa.rs  files.rs  graph.rs  ingest.rs  memory.rs  mod.rs  models.rs  prompts.rs  scheduler.rs  sessions.rs  system.rs  tags.rs  traces.rs  ws.rs
crates/umms-api/src/prompt/: diary_generator.rs  engine.rs  mod.rs  store.rs  types.rs
crates/umms-api/src/services/: entity_extractor.rs  mod.rs
crates/umms-api/src/session/: mod.rs  store.rs
crates/umms-consolidation/: Cargo.toml
crates/umms-consolidation/src/: auto_promote.rs  decay.rs  graph_evolution.rs  lib.rs  llm.rs  scheduler.rs  wkd.rs
crates/umms-core/: Cargo.toml
crates/umms-core/src/: config.rs  enums.rs  error.rs  ids.rs  importance.rs  lib.rs  memory.rs  model.rs  tag.rs  traits.rs  types.rs
crates/umms-devserver/: Cargo.toml
crates/umms-devserver/src/: main.rs
crates/umms-encoder/: Cargo.toml
crates/umms-encoder/src/: gemini.rs  gemini_provider.rs  lib.rs  pool.rs
crates/umms-model/: Cargo.toml
crates/umms-model/src/: gemini_provider.rs  lib.rs  pool.rs  stats.rs  trace.rs
crates/umms-observe/: Cargo.toml
crates/umms-observe/src/: audit.rs  lib.rs  metrics.rs  tracing_setup.rs
crates/umms-persona/: Cargo.toml
crates/umms-persona/src/: defaults.rs  diary.rs  diary_store.rs  lib.rs  matcher.rs  persona.rs  store.rs
crates/umms-python/: Cargo.toml
crates/umms-python/src/: lib.rs
crates/umms-retriever/: Cargo.toml
crates/umms-retriever/src/: lib.rs  pipeline.rs
crates/umms-retriever/src/epa/: pca.rs
crates/umms-retriever/src/ingest/: chunker.rs  graph_builder.rs  mod.rs  pipeline.rs  skeleton.rs  tag_extractor.rs
crates/umms-retriever/src/recall/: bm25.rs  hybrid.rs  mod.rs
crates/umms-retriever/src/reshaping/: mod.rs  reshape.rs
crates/umms-retriever/src/tokenizer/: jieba_tokenizer.rs  llm_tokenizer.rs  mod.rs  whitespace_tokenizer.rs
crates/umms-scheduler/: Cargo.toml
crates/umms-scheduler/src/: engine.rs  executor.rs  lib.rs  store.rs  task.rs
crates/umms-server/: Cargo.toml
crates/umms-server/src/: main.rs
crates/umms-storage/: Cargo.toml
crates/umms-storage/benches/: storage_bench.rs
crates/umms-storage/src/: lib.rs  promotion.rs
crates/umms-storage/src/cache/: mod.rs  moka_cache.rs
crates/umms-storage/src/file/: local_fs.rs  mod.rs
crates/umms-storage/src/graph/: cozo_store.rs  mod.rs  sqlite_store.rs
crates/umms-storage/src/isolation/: agent_context.rs  mod.rs  switcher.rs
crates/umms-storage/src/tag/: composite.rs  lance_tag.rs  mod.rs  sqlite_cooc.rs
crates/umms-storage/src/vector/: lance_store.rs  mod.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.vue
dashboard/src/__tests__/: api-client.test.ts
dashboard/src/api/: client.ts
dashboard/src/components/graph/: ForceGraph.vue
dashboard/src/router/: index.ts
dashboard/src/types/: index.ts
dashboard/src/views/: AgentManager.vue  AuditTrail.vue  Benchmarks.vue  Consolidation.vue  DocumentIngest.vue  GraphExplorer.vue  MemoryBrowser.vue  ModelTraces.vue  Overview.vue  PromptEditor.vue  TagExplorer.vue
docs/: ADR-003-cozodb-graph-storage.md  ADR-014-frontend-backend-separation.md  ADR-015-vcp-lessons-learned.md  ADR-016-tagmem-wave-algorithm-reference.md  AUDIT_2026-03-28.md  CODING_STANDARDS.md  OPT-001-vcp-prompt-system-migration.md  OPT-002-epa-algorithm-evolution.md  QA_TEST_PLAN.md
docs/architecture/: LGSRR_EPA架构反思.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: agent.rs  audit.rs  chat.rs  consolidation.rs  diary.rs  encoder.rs  files.rs  graph.rs  ingest.rs  memory.rs  mod.rs  persona.rs  prompts.rs  sessions.rs  system.rs  tags.rs  traces.rs
tests/integration/: Cargo.toml  full_stack_e2e.rs  storage_e2e.rs
