[package]
name = "umms-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
umms-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
