[package]
name = "umms-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
umms-core.workspace = true
umms-storage.workspace = true
umms-encoder.workspace = true
umms-retriever.workspace = true
umms-observe.workspace = true
umms-consolidation.workspace = true
umms-persona.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
prometheus-client.workspace = true
