[package]
name = "umms-consolidation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
umms-core.workspace = true
umms-storage.workspace = true
umms-encoder.workspace = true
umms-retriever.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
serde_json.workspace = true
