[package]
name = "umms-core"
description = "UMMS core types, traits, and error definitions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
config.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
