[package]
name = "umms-devserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "umms-dev"
path = "src/main.rs"

[dependencies]
umms-core.workspace = true
umms-storage.workspace = true
umms-observe.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
prometheus-client.workspace = true
