[package]
name = "umms-observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
umms-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus-client.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
