[package]
name = "umms-retriever"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
umms-core.workspace = true
umms-storage.workspace = true
umms-encoder.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tantivy.workspace = true
chrono.workspace = true
jieba-rs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true
