[package]
name = "umms-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
umms-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
moka.workspace = true
tracing.workspace = true
rusqlite.workspace = true
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true
